--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,18 @@
-spring.application.name=CMMS Lite
+spring.application.name=PhotographyPortfolioAndClientManagementSystem
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# Server Configuration
+server.port=8080
+
+# CORS Configuration
+spring.web.cors.allowed-origins=*
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+
+# Security
+jwt.token.secretKey=asdsaoodsaosodcksoacksocksaokcoskcasokcasokcmmcmmcmc
+jwt.token.duration=36000000
+jwt.token.issuer=gruchh
