--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "generate-api": "openapi --input http://localhost:8080/v3/api-docs --output ./src/app/core/api --client angular"
   },
   "prettier": {
     "overrides": [
@@ -26,6 +27,8 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@ng-icons/core": "^32.1.0",
+    "@ng-icons/heroicons": "^32.1.0",
     "@tailwindcss/postcss": "^4.1.11",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
@@ -44,6 +47,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "openapi-typescript-codegen": "^0.29.0",
     "typescript": "~5.8.2"
   }
 }
