--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "generate-api": "openapi --input http://localhost:8080/v3/api-docs --output ./src/app/core/api --client angular"
+    "generate-api": "rimraf ./src/app/core/api && openapi-generator-cli generate --input-spec http://localhost:8080/v3/api-docs --output ./src/app/core/api --generator-name typescript-angular"
   },
   "prettier": {
     "overrides": [
@@ -40,6 +40,7 @@
     "@angular/build": "^20.1.0",
     "@angular/cli": "^20.1.0",
     "@angular/compiler-cli": "^20.1.0",
+    "@openapitools/openapi-generator-cli": "^2.21.4",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
@@ -48,6 +49,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "openapi-typescript-codegen": "^0.29.0",
+    "rimraf": "^6.0.1",
     "typescript": "~5.8.2"
   }
 }
