--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "8081:80"
+      - "8091:80"
     environment:
-      - REACT_APP_API_URL=http://backend:8080/api
+      - API_URL=http://backend:8080/api
     depends_on:
       - backend
     networks:
@@ -20,6 +20,7 @@ services:
       - "8080:8080"
     restart: on-failure
     environment:
+      - SPRING_PROFILES_ACTIVE=prod
       - SPRING_DATASOURCE_USERNAME=${DB_USERNAME}
       - SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/${DB_NAME}
@@ -28,6 +29,7 @@ services:
         condition: service_healthy
     networks:
       - app-network
+
   db:
     image: postgres:17
     environment:
@@ -45,12 +47,10 @@ services:
       retries: 5
     networks:
       - app-network
+
 networks:
   app-network:
     driver: bridge
-    
-    
-
 
 volumes:
   db-data:
