Create production version with flyway database creation

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,5 @@
 spring.application.name=LightweightMaintenanceManagementSystem
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.format_sql=true
-
 # Server Configuration
 server.port=8080
 
@@ -16,3 +12,7 @@ spring.web.cors.allowed-headers=*
 jwt.token.secretKey=asdsaoodsaosodcksoacksocksaokcoskcasokcasokcmmcmmcmc
 jwt.token.duration=36000000
 jwt.token.issuer=gruchh
+
+# Logging
+logging.level.com.portfolio=DEBUG
+logging.level.org.springframework.web=DEBUG
