--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -100,6 +100,17 @@
 			<artifactId>javafaker</artifactId>
 			<version>1.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>11.11.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-database-postgresql</artifactId>
+			<version>11.11.1</version>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
