--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -5,8 +5,13 @@ spring.datasource.password=sa
 spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.enabled=true
 
+# Wy??czenie Flyway dla profilu dev
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.format_sql=true
+
 # Logging
 logging.level.com.portfolio=DEBUG
 logging.level.org.springframework.web=DEBUG
 
-spring.jpa.hibernate.ddl-auto=create-drop
