--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -6,6 +6,8 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.enabled=true
 
 # Wy??czenie Flyway dla profilu dev
+spring.flyway.enabled=false
+
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
