--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.h2.console.enabled=false
 
 spring.flyway.enabled=true
 
