--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "api:generate:dev": "rimraf ./src/app/core/api/generated && openapi-generator-cli generate --input-spec http://localhost:8080/v3/api-docs --output ./src/app/core/api/generated --generator-name typescript-angular --additional-properties=withInterfaces=true,providedInRoot=true,enumPropertyNaming=original",
