--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,16 +23,18 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.2.1",
     "@angular/cdk": "^20.1.5",
-    "@angular/common": "^20.1.0",
-    "@angular/compiler": "^20.1.0",
-    "@angular/core": "^20.1.0",
-    "@angular/forms": "^20.1.0",
-    "@angular/platform-browser": "^20.1.0",
-    "@angular/router": "^20.1.0",
+    "@angular/common": "^20.2.1",
+    "@angular/compiler": "^20.2.1",
+    "@angular/core": "^20.2.1",
+    "@angular/forms": "^20.2.1",
+    "@angular/platform-browser": "^20.2.1",
+    "@angular/router": "^20.2.1",
     "@ng-icons/core": "^32.1.0",
     "@ng-icons/heroicons": "^32.1.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "ngx-toastr": "^19.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
@@ -41,9 +43,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.1.0",
-    "@angular/cli": "^20.1.0",
-    "@angular/compiler-cli": "^20.1.0",
+    "@angular/build": "^20.2.0",
+    "@angular/cli": "^20.2.0",
+    "@angular/compiler-cli": "^20.2.1",
     "@openapitools/openapi-generator-cli": "^2.21.4",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.8.0",
