Add refresh token mechanizm to backend and frontend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.web.cors.allowed-headers=*
 # Security
 jwt.token.secretKey=asdsaoodsaosodcksoacksocksaokcoskcasokcasokcmmcmmcmc
 jwt.token.duration=36000000
+jwt.refresh-duration=604800000
 jwt.token.issuer=gruchh
 
 # Logging
