--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -2,4 +2,5 @@ spring.flyway.enabled=false
 
 jwt.token.secret-key=sadiisaduaisduiasudiasudasierwrwer324234xasas
 jwt.token.duration=3600000
+jwt.refresh-duration=604800000
 jwt.token.issuer=cmms-lite-test
