--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,9 @@
     "@angular/forms": "^20.2.1",
     "@angular/platform-browser": "^20.2.1",
     "@angular/router": "^20.2.1",
+    "@fullcalendar/angular": "^6.1.19",
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
     "@ng-icons/core": "^32.1.0",
     "@ng-icons/heroicons": "^32.1.0",
     "@tailwindcss/postcss": "^4.1.11",
